err/gerald.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gerald'...
Compiling './lib/python3.5/site-packages/gerald/mysql_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/mysql_schema.py", line 123
    raise ValueError, "data_type parameter is mandatory"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/oracle_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/oracle_schema.py", line 243
    raise ValueError, 'Data length must be greater than zero'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/postgres_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/postgres_schema.py", line 152
    raise ValueError, 'data length must be greater than 0'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/schema.py'...
***   File "./lib/python3.5/site-packages/gerald/schema.py", line 1198
    print "This module should not be invoked from the command line"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gerald/tests'...
Compiling './lib/python3.5/site-packages/gerald/tests/test_mysql_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/tests/test_mysql_schema.py", line 512
    print self.table.indexes.items()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/tests/test_oracle_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/tests/test_oracle_schema.py", line 1365
    print "Getting details of Trigger %s from database" % self.trigger_name
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gerald/utilities'...
Compiling './lib/python3.5/site-packages/gerald/utilities/dburi.py'...
***   File "./lib/python3.5/site-packages/gerald/utilities/dburi.py", line 63
    raise ValueError, "Connection must include host"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gerald-0.4.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
